--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,9 +2,8 @@ name: Room Availability Notification
 
 on:
   schedule:
-    # Runs every day at 3pm, 6pm, 9pm PST (converted to UTC)
-    - cron: '0 23,2,5 * * *'  # UTC times for 3pm,6pm,9pm PST
-  workflow_dispatch:  # allows manual triggering
+    - cron: '0 23,2,5 * * *'  # 3pm, 6pm, 9pm PST (UTC)
+  workflow_dispatch:
 
 jobs:
   scrape_and_notify:
@@ -22,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests sendgrid
+          pip install sendgrid playwright
+          playwright install firefox
 
       - name: Run scraper
         env:
